Update meta description and section titles in HTML

--- a/topic-sel.html
+++ b/topic-sel.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SEL × 学习者能量加油站 | EduSynergy</title>
-  <meta name="description" content="SEL × 学习者能量加油站：共读 Your Brain 系列、春节礼仪与祝福、SEL工具箱（持续更新）。" />
+  <meta name="description" content="SEL × 学习者能量加油站：共读（Half Lesson + 1–7）、春节礼仪与祝福、工具箱。" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -23,14 +23,13 @@
 
 <main class="container">
 
-  <!-- HERO -->
+  <!-- Hero -->
   <section class="hero">
     <div class="hero-card section-social">
       <h1 class="stack">
         <span class="zh">SEL × 学习者能量加油站</span>
         <span class="en">SEL × Learner Energy Station</span>
       </h1>
-
       <p class="lead stack">
         <span class="zh">在追求卓越的路上，你的情绪同样需要被看见。</span>
         <span class="en">Because your emotional well-being is the engine of your academic growth.</span>
@@ -44,219 +43,203 @@
     </div>
   </section>
 
-  <!-- 共读专区 -->
+  <!-- Co-reading -->
   <section class="card">
     <h2 class="stack">
-      <span class="zh">共读专区：The 7½ Lessons About the Brain</span>
-      <span class="en">Co-reading: The 7½ Lessons About the Brain</span>
+      <span class="zh">共读专区（按顺序）</span>
+      <span class="en">Book Club (In Order)</span>
     </h2>
 
     <p class="muted stack">
-      <span class="zh">按顺序阅读：Half Lesson → Lesson 1–7。每篇都有中英对照，适合学习语言与思维方式。</span>
-      <span class="en">Read in order: Half Lesson → Lessons 1–7. Bilingual for language + thinking.</span>
+      <span class="zh">《关于大脑的七节半课》Lisa Feldman Barrett</span>
+      <span class="en">Start from 7 and Half Lessons About The Brain</span>
     </p>
 
-    <div class="grid topics">
+    <div class="cta-row">
+      <a class="btn" href="topic-coreading.html">
+        <span class="zh">共读目录</span><span class="en">Directory</span>
+      </a>
+      <a class="btn primary" href="reading-00-half.html">
+        <span class="zh">从第 0 篇开始</span><span class="en">Start Here</span>
+      </a>
+    </div>
 
-      <article class="topic-card section-social">
-        <h3 class="topic-title">
-          <a href="topic-coreading.html">
-            <span class="zh">共读目录（总览）</span>
-            <span class="en">Full Directory</span>
-          </a>
-        </h3>
-        <p class="muted stack">
-          <span class="zh">如果你更想先看全书结构，从这里进入。</span>
-          <span class="en">Prefer the big picture first? Start here.</span>
-        </p>
-      </article>
+    <div class="grid topics" style="margin-top:16px;">
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
           <a href="reading-00-half.html">
-            <span class="zh">Half Lesson：Your Brain Is Not for Thinking</span>
-            <span class="en">Half Lesson: Your Brain Is Not for Thinking</span>
+            <span class="zh">Half Lesson（开启篇）：你的大脑其实不是用来思考的</span>
+            <span class="en">Half Lesson (00): Your Brain is not for thinking</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">把“学习”重新理解为：预测、调节与意义建构。</span>
-          <span class="en">Reframing learning as prediction, regulation, and meaning-making.</span>
+          <span class="zh">先把“能量—预测—情绪”连起来</span>
+          <span class="en">Link energy, prediction, and emotion</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-01-onebrain.html">
-            <span class="zh">Lesson 1：You Have One Brain (Not Three)</span>
-            <span class="en">Lesson 1: You Have One Brain (Not Three)</span>
+          <a href="reading-01-one-brain.html">
+            <span class="zh">Lesson 1：你只有一个大脑（不是区域分明的三部分）</span>
+            <span class="en">Lesson 1: You have one brain (Not Three)</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">打破“三脑”误解，建立统一视角。</span>
-          <span class="en">A unified view of the brain.</span>
+          <span class="zh">整合式理解：不是“理性/情绪/本能”三分法</span>
+          <span class="en">Integration over “three-brain” myths</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
           <a href="reading-02-network.html">
-            <span class="zh">Lesson 2：Your Brain Is a Network</span>
-            <span class="en">Lesson 2: Your Brain Is a Network</span>
+            <span class="zh">Lesson 2：大脑是个网络系统</span>
+            <span class="en">Lesson 2: Your Brain is a Network</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">网络、路径与可塑性：你如何被“练出来”。</span>
-          <span class="en">Networks, pathways, and plasticity.</span>
+          <span class="zh">网络如何协作：注意、记忆、情绪与行动</span>
+          <span class="en">How networks coordinate attention, memory, emotion</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-03-wiring.html">
-            <span class="zh">Lesson 3：Little Brains Wire Themselves to Their World</span>
-            <span class="en">Lesson 3: Little Brains Wire to Their World</span>
+          <a href="reading-03-little-brains.html">
+            <span class="zh">Lesson 3：小小的脑袋将自己与所处的世界连接起来</span>
+            <span class="en">Lesson 3: Little Brains wire themselves to their world</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">环境、经验与发展：孩子如何被世界塑形。</span>
-          <span class="en">Development through experience.</span>
+          <span class="zh">环境、经验与发展：如何“被世界塑形”</span>
+          <span class="en">Experience shapes development</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
           <a href="reading-04-predicts.html">
-            <span class="zh">Lesson 4：Your Brain Predicts (Almost) Everything You Do</span>
-            <span class="en">Lesson 4: Your Brain Predicts (Almost) Everything</span>
+            <span class="zh">Lesson 4：你的大脑是个几乎永不停歇的预测机器</span>
+            <span class="en">Lesson 4: Your Brain Predicts (almost) everything you do</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">预测加工：为什么“理解”比“记住”更重要。</span>
-          <span class="en">Prediction as the brain’s default mode.</span>
+          <span class="zh">预测式大脑：学习与情绪的底层逻辑</span>
+          <span class="en">Prediction as a core mechanism</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-05-withothers.html">
-            <span class="zh">Lesson 5：Your Brain Secretly Works with Other Brains</span>
-            <span class="en">Lesson 5: Brains Work with Other Brains</span>
+          <a href="reading-05-other-brains.html">
+            <span class="zh">Lesson 5：大脑们之间的相互影响</span>
+            <span class="en">Lesson 5: Your Brain secretly works with other brains</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">共同调节与关系：学习不是孤独工程。</span>
-          <span class="en">Co-regulation and social learning.</span>
+          <span class="zh">共同调节：关系就是学习的“能量系统”</span>
+          <span class="en">Co-regulation: relationships shape learning</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-06-minds.html">
-            <span class="zh">Lesson 6：Brains Make More than One Kind of Mind</span>
-            <span class="en">Lesson 6: More than One Kind of Mind</span>
+          <a href="reading-06-more-than-one-mind.html">
+            <span class="zh">Lesson 6：多种多样的心智模式</span>
+            <span class="en">Lesson 6: Brains make more than one kind of mind</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">多种“心智模式”：任务、情境与自我切换。</span>
-          <span class="en">Multiple modes of mind.</span>
+          <span class="zh">同一大脑，多种“心智模式”</span>
+          <span class="en">Multiple modes of mind</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
           <a href="reading-07-reality.html">
-            <span class="zh">Lesson 7：Our Brains Can Create Reality</span>
-            <span class="en">Lesson 7: Our Brains Create Reality</span>
+            <span class="zh">Lesson 7：Our brains can create reality</span>
+            <span class="en">Lesson 7: Our brains can create reality</span>
           </a>
         </h3>
         <p class="muted stack">
-          <span class="zh">意义、解释与现实：我们如何“活在自己的版本里”。</span>
-          <span class="en">Meaning, interpretation, and lived reality.</span>
+          <span class="zh">现实感如何被建构：意义、叙事与行动</span>
+          <span class="en">How meaning, narratives, and action shape reality</span>
         </p>
       </article>
 
     </div>
   </section>
 
-  <!-- 春节加餐 -->
+  <!-- Spring Festival -->
   <section class="card">
     <h2 class="stack">
-      <span class="zh">春节小加餐：礼仪与祝福</span>
-      <span class="en">Mini Add-on: Spring Festival Rituals</span>
+      <span class="zh">春节专题（小加餐）</span>
+      <span class="en">Spring Festival (Mini Add-on)</span>
     </h2>
 
     <p class="muted stack">
-      <span class="zh">把“说祝福、待人接物”当作 SEL 的真实练习：关系、文化、语言与情绪调节。</span>
-      <span class="en">Turn greetings and etiquette into SEL practice: relationship, culture, language, and regulation.</span>
+      <span class="zh">把“说祝福、聚餐礼节、待人接物”变成可练习的 SEL：情境判断、共情、表达与边界感。</span>
+      <span class="en">Turn greetings and table etiquette into SEL practice: situational judgment, empathy, expression, and boundaries.</span>
     </p>
 
-    <div class="grid topics">
-      <article class="topic-card section-social">
-        <h3 class="topic-title">
-          <a href="spring.html">
-            <span class="zh">春节祝福与聚餐礼节</span>
-            <span class="en">Blessings & Table Etiquette</span>
-          </a>
-        </h3>
-        <p class="muted stack">
-          <span class="zh">练：得体表达、共情、场景判断、双语切换。</span>
-          <span class="en">Practice: appropriateness, empathy, situational judgment, bilingual switching.</span>
-        </p>
-      </article>
+    <div class="cta-row">
+      <a class="btn primary" href="spring.html">
+        <span class="zh">进入春节专题</span><span class="en">Open Spring Topic</span>
+      </a>
     </div>
   </section>
 
-  <!-- 工具箱占位 -->
+  <!-- Toolkit placeholder -->
   <section class="card">
     <h2 class="stack">
       <span class="zh">SEL 工具箱（持续更新）</span>
       <span class="en">SEL Toolkit (Growing)</span>
     </h2>
+    <p class="muted stack">
+      <span class="zh">你以后写“工具卡/练习单/家校沟通脚本”，都可以放在这里，并按主题归档。</span>
+      <span class="en">Future tool cards, practice sheets, and family-school scripts can live here, organized by theme.</span>
+    </p>
 
-    <div class="grid topics">
+    <div class="grid topics" style="margin-top:16px;">
       <article class="topic-card section-social">
         <h3 class="topic-title stack">
-          <span class="zh">（待写）身体预算自评 + 90秒重置</span>
+          <span class="zh">（待写）身体预算自评 + 90 秒重置</span>
           <span class="en">(Draft) Body Budget Check + 90s Reset</span>
         </h3>
         <p class="muted stack">
-          <span class="zh">写好后：链接到 sel-toolkit-bodybudget.html</span>
-          <span class="en">Later: link to sel-toolkit-bodybudget.html</span>
+          <span class="zh">适合考试季、申请季、跨文化适应期</span>
+          <span class="en">For exam season, applications, transitions</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title stack">
           <span class="zh">（待写）三种框架重写同一件事</span>
-          <span class="en">(Draft) Reframe in 3 Frames</span>
+          <span class="en">(Draft) Reframe the same event in 3 frames</span>
         </h3>
         <p class="muted stack">
-          <span class="zh">写好后：链接到 sel-toolkit-reframing.html</span>
-          <span class="en">Later: link to sel-toolkit-reframing.html</span>
+          <span class="zh">把“卡住”变成“可行动”</span>
+          <span class="en">From stuck → actionable</span>
         </p>
       </article>
 
       <article class="topic-card section-social">
         <h3 class="topic-title stack">
-          <span class="zh">（待写）换通道学习：看→说→写→教</span>
-          <span class="en">(Draft) Switch Channels: See→Say→Write→Teach</span>
+          <span class="zh">（待写）共同调节：家庭对话提示卡</span>
+          <span class="en">(Draft) Co-regulation: family conversation prompts</span>
         </h3>
         <p class="muted stack">
-          <span class="zh">写好后：链接到 sel-toolkit-routing.html</span>
-          <span class="en">Later: link to sel-toolkit-routing.html</span>
+          <span class="zh">家长与青少年都能用</span>
+          <span class="en">Useful for parents and teens</span>
         </p>
       </article>
     </div>
   </section>
 
-  <footer class="footer">
-    <div class="footer-inner">
-      <div class="muted small">© <span id="year"></span> EduSynergy</div>
-    </div>
-  </footer>
-
 </main>
 
-<script src="app.js"></script>
 </body>
 </html>
