Update lesson links in topic-sel.html

--- a/topic-sel.html
+++ b/topic-sel.html
@@ -107,7 +107,7 @@
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-03-little-brains.html">
+          <a href="reading-03-wire.html">
             <span class="zh">Lesson 3：小小的脑袋将自己与所处的世界连接起来</span>
             <span class="en">Lesson 3: Little Brains wire themselves to their world</span>
           </a>
@@ -120,7 +120,7 @@
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-04-predicts.html">
+          <a href="reading-04-predict.html">
             <span class="zh">Lesson 4：你的大脑是个几乎永不停歇的预测机器</span>
             <span class="en">Lesson 4: Your Brain Predicts (almost) everything you do</span>
           </a>
@@ -133,7 +133,7 @@
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-05-other-brains.html">
+          <a href="reading-05-social.html">
             <span class="zh">Lesson 5：大脑们之间的相互影响</span>
             <span class="en">Lesson 5: Your Brain secretly works with other brains</span>
           </a>
@@ -146,7 +146,7 @@
 
       <article class="topic-card section-social">
         <h3 class="topic-title">
-          <a href="reading-06-more-than-one-mind.html">
+          <a href="reading-06-minds.html">
             <span class="zh">Lesson 6：多种多样的心智模式</span>
             <span class="en">Lesson 6: Brains make more than one kind of mind</span>
           </a>
